# Boids

./: CMakeLists.txt
src/: Boid.cpp  Flock.cpp  Flock.h  Game.cpp
